Update SearchRepositoryImplTest to add new cases and test database usage implementation